assets/navigation.css
.product-link {
    display: none !important;
}

.link--text:hover,
.link--text:focus,
.link--text:active,
.header__heading-link:hover .h2 {
    color: #1D2E42;
}

.mobile-header-icon {
  padding: 1.313rem 0 0 0.938rem;
}

.header-color {
    background: #F1E4D4 !important;
    border: none;
}

input,
select {
    -webkit-appearance: none;
}

.header__heading-link .h2 {
    color: white;
}

.menu-drawer .list-social__link {
    background: white;
}

.menu-drawer__inner-container,
.menu-drawer__utility-links {
    background: white;
}

.dropdown-item {
    line-height: 150%;
    color: #1D2E42;
}

.dropdown-item:hover,
.dropdown-item:active {
    background: none;
    color: #37346A;
}

.bg-announcement {
    background: #1D2E42;
    padding-bottom: 0;
    border: none;
    backdrop-filter: blur(10px);
}

.nav-mobile-single-line {
    margin-top: 15px !important;
    padding-top: 15px !important;
    padding-bottom: 15px !important;
    /* border-top: 1px solid #F0F0F0 !important;; */
    /* border-bottom: 1px solid #F0F0F0 !important; */

    width: 100% !important;
}

.nav-mobile-single-line div {
    padding: 0 !important;

}

.nav-mobile-double-line {
    padding-top: 12px !important;
    padding-bottom: 12px !important;
    /* border-bottom: 1px solid #F0F0F0 !important; */
    width: 100% !important;
}

.nav-mobile-single-line-b {
    padding-top: 12px !important;
    padding-bottom: 12px !important;
    width: 100% !important;
}

.nav-mobile-dropdown-single {
  max-width: 17.5;
  word-break: break-word;
    /* border-top: 1px solid #FFFFFF; */
    padding-top: 12px !important;
  background-color: white !important;
}

.nav-mobile-dropdown-single-padding {
    padding-bottom: 12px !important;
}

.nav-mobile-dropdown-single-first {
    background-color: white !important;
    padding-top: 18px !important;
    padding-bottom: 12px !important;
}

.announcement-msg {
    font-size: 15px;
    color: white;
    line-height: normal;
    font-weight: 600;
    margin-bottom: 0;
    padding-top: 14px;
    padding-bottom: 13px;
}

.navigation-cart-count {
    color: white;
    font-weight: 600;
    line-height: 150%;
    font-size: 12px;
    position: absolute;
    top: 50%;
}

.navigation-cart-count span {
    color: white;
}

.cart-icon-parent {
    position: relative;
}

.navigation-link {
    font-weight: 400;
    font-size: 1.188rem;
    line-height: 150%;
    color: #1D2E42;
    text-decoration: none;
}

.dropdown {
    cursor: pointer;
}

.navigation-link:hover {
    background: none;
    font-weight: 400;
    line-height: 150%;
    letter-spacing: normal;
    color: #37346A;
}

.navigation-dropdown {
    border: none;
}

.shop-title-logo {
    font-size: 14px;
    font-weight: bold;
    line-height: 19px;
    text-transform: uppercase;
}

.dropdown-menu {
    border-radius: 0.938rem;
    border: none;
    background: white;
}


.dropdown-toggle {
    background: transparent;
    border: none;
}

/* .dropdown-toggle:hover {
    background: transparent;
    border: none;
    color: #1D2E42;
    font-weight: 600;
}
 */

.dropdown-toggle:focus {
    outline: none !important;
    box-shadow: none !important;
    background: transparent;
    border: none;
    color: #1D2E42;
    font-weight: 600;
}


.section-header {
    z-index: 1000 !important;
}

.dropdown-toggle-hovered {
    background-color: unset !important;
    font-weight: 500 !important;
    color: #37346A;
}

.dropdown-toggle-icon-rotate {
    transform: rotate(180deg);
}

.dropdown-toggle-icon-rotate path {
    fill: #37346A;
}

.dropdown-menu-hovered {
  display: block;
  position: absolute;
  inset: 0px auto auto 0px;
  margin: 0px;
  transform: translate(0px, 20px);
}


.dropdown-toggle::after {
    content: "";
    display: none !important;
}

/* .dropdown-toggle:hover:after {
    border: none;
    content: "\276F";
    font-weight: 400 !important;
    vertical-align: 0;
    transform: rotate(90deg);
} */

.dropdown-toggle[aria-expanded="true"]::after {
    transform: rotate(270deg);
}

.header__icon--menu span {
    justify-content: start;
}

.mobile-nav-dropdown {
    transform: unset !important;
}

.mobile-drawer__navigation {
  width: 19.688rem !important;
}

.mobile-full-dropdown {
    border-radius: 6px;
    border-top: none !important;
    border-bottom: none !important;
    background: #EF8498;
    margin: 15px 0 0 0 !important;
    padding: 0 15px 0 15px;

}

#menu-drawer {
    backdrop-filter: blur(10px);
  overflow: hidden !important;
}

.mobile-nav-el-padding {
    margin: 0;
    font-weight: 400;
    line-height: 24px;
}

.mobile-dropdown-toggle {
    font-size: 1.188rem;
    line-height: 24px;
    font-weight: 400;
    -webkit-appearance: none;
}

.mobile-dropdown-toggle[aria-expanded="true"] {
    font-weight: 600;
}

.mobile-dropdown-toggle[aria-expanded="false"] {
    font-weight: 400;
}

.mobile-dropdown-toggle:hover,
.mobile-dropdown-toggle:focus,
.mobile-dropdown-toggle:active {
  color: #1D2E42 !important;
  background-color: white !important;
}

.mobile-dropdown-toggle.show > .mobile-dropdown-icon {
  transform: rotate(180deg)
}

.mobile-nav-dropdown {
    font-size: 17px;
    font-weight: 400;
    line-height: 15px;
}


.mobile-nav-dropdown a {
    text-wrap: wrap;
    padding-right: 0 !important;
    padding-left: 50px !important;
}

.menu-drawer__navigation {
    padding: 45px 15px 0 15px;
}

.header__icon--menu[aria-expanded="true"]::after {
    position: fixed;
    content: url("close-menu.svg");
    top: 20px;
}

.header__icon--cart img {
    max-height: 45px;
}


.css--country-modal {
    position: fixed;
    width: 100%;
    height: 100%;
    background: rgba(48, 48, 48, 0.75);
    backdrop-filter: blur(10px);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 10000;
}

.css--country-modal .block {
    overflow: auto;
    max-height: 90vh;
    max-width: 517px;
    width: 100%;
    margin: 0 30px 0 30px;
}

.css--country-modal .country-modal {
    background: white;
    border-radius: 12px;
    margin-top: 40px;
    padding: 50px 54px 50px 54px;
}

.css--country-modal .country-modal-title {
    color: #1D2E42;
    font-size: 17px;
    line-height: 150%;
    font-weight: 700;
    padding-bottom: 15px;
    text-align: center;
}

.css--country-modal .close {
    height: 30px;
    display: flex;
    justify-content: end;
    background: transparent;
}

.css--country-modal-close img {
    width: 30px;
    height: 30px;
}

.css--country-modal .modal-country-selector {
    background: #F0F0F0;
    border-radius: 8px;
    margin-top: 20px;
    padding: 15px 30px;
    text-align: center;
    position: relative;
    cursor: pointer;
}

.css--country-modal .modal-country-selector img {
    width: 36px;
    height: 36px;
    position: absolute;
    left: 30px;
    top: 50%;
    transform: translateY(-50%);
}

.css--country-modal .modal-country-selector {
    text-decoration: none;
    font-weight: 500;
    font-size: 18px;
    color: #505050;
}


.navigation-desktop-country-cart {
    justify-self: end;
    display: flex;
    align-items: center;
}

.navigation-dropdown-desktop {
    background: white;
    padding: 14px 20px;
    border: 1px solid #CCCCCC;
    border-radius: 8px;
    display: flex;
}

.navigation-dropdown-desktop .nav-country-selector-div {
    font-size: 1.063rem;
    padding-right: 10px !important;
}

.navigation-dropdown-desktop .nav-country-selector-single-selected {
    text-align: left;
}

.nav-country-selector-single-selected span {
    font-size: 1rem;
    padding: 0 10px;
}
.dropdown-country-mobile {
    position: relative !important;
    transform: unset !important;
}

.shopify-cleanslate .paypalLight {
    width: 440px !IMPORTANT;
    max-width: none;
}
@media screen and (max-width: 749.9px) {
    .shopify-cleanslate .paypalLight {
        width: 100% !IMPORTANT;
    }
}



.dropdown-mobile {
    padding: 0 30px 40px 30px;
}

.dropdown-mobile .nav-country-selector-div {
    width: 100%;
}

.dropdown-mobile .navigation-dropdown-desktop {
    width: 100%;
}


.navigation-dropdown-desktop:hover, .navigation-dropdown-desktop:focus, .navigation-dropdown-desktop:active {
    background: white;
    border: 1px solid #CCCCCC;
    outline: none !important;
    box-shadow: none !important;
}

.navigation-dropdown-desktop::after {
    border: none;
    content: "\276F";
    color: #505050;
    font-weight: 400;
    vertical-align: 0;
    transform: rotate(90deg);
}

.navigation-dropdown-desktop[aria-expanded="true"]::after {
    transform: rotate(270deg);
}

.nav-country-selector-single {
    padding: 10px 28px 10px 20px;
    font-size: 14px;
}

.nav-country-selector-single a, .nav-country-selector-single a:hover, .nav-country-selector-single a:focus {
    text-decoration: none;
    color: #505050;
    font-weight: 500;
}

.dropdown-country-desktop {
    background: white !important;
    border: 1px solid #CCCCCC;
    min-width: auto !important;
    margin-top: -10px !important;
    border-top: none;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    box-shadow: none !important;
    padding-top: 4px;
}

@media screen and (max-width: 1383px) {
    .dropdown-desktop {
        display: none;
    }
}


@media screen and (max-width: 992px) {
    .css--country-modal .close {
        height: 14px;
    }

    .css--country-modal-close img {
        width: 14px;
        height: 14px;
    }

    .css--country-modal .country-modal {
        border-radius: 8px;
        margin-top: 25px;
        padding: 35px 20px 35px 20px;
    }

    .css--country-modal .modal-country-selector img {
        width: 28px;
        height: 28px;
        left: 20px;
    }

    .css--country-modal .country-modal-title {
        font-size: 16px;
        line-height: 27px;
        font-weight: 700;
        padding-bottom: 10px;
    }

    .css--country-modal .modal-country-selector {
        text-decoration: none;
        font-weight: 500;
        font-size: 14px;
        color: #505050;
    }
}

@media screen and (max-width: 1383px) {
    .header__icon--cart img {
        max-height: 35px;
    }

    header.header {
        padding-top: 0;
        padding-bottom: 0;
    }

    header-drawer {
        margin-left: 0 !important;
    }

    .header__icon--menu {
        display: flex;
        align-items: center;
        justify-content: start;
        height: 60px;
    }
}


@media screen and (min-width: 1384px) {
    .announcement-msg {
        font-size: 18px;
        line-height: normal;
        padding-top: 12px;
        padding-bottom: 11px;
    }

    .header__heading-link {
        padding: 0;
        margin-left: 0;
    }

    .navigation-cart-count {
        line-height: 150%;
        font-size: 14px;
    }

    .navigation-link {
        font-size: 1.125rem;
        margin-right: 55px;
    }

    .header--middle-left {
        column-gap: 5.625rem;
    }

    .shop-title-logo {
        font-style: normal;
        font-weight: 700;
        font-size: 20px;
        line-height: 24px;
        text-transform: uppercase;
        color: white !important;
    }

    .dropdown-toggle {
        padding: 0;
    }

    .dropdown-menu {
        background: white;
        box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
    }

    .dropdown-menu {
        min-width: 240px;
    }

    .dropdown-item {
        padding: 0.469rem 0 0.469rem 6px;
        font-size: 1.125rem;
    }

    .dropdown-menu {
        padding: 0.781rem 0
    }

    .dropdown-menu li {
        padding: 0 15px;
    }

    /*.dropdown-item:hover {*/
    /*    border-radius: 8px;*/
    /*}*/

    /*.dropdown-item:active,*/
    /*.dropdown-item:focus {*/
    /*    border-radius: 12px;*/
    /*    color: black;*/
    /*    background: rgba(233, 236, 239, 0.9);*/
    /*}*/
}

@media screen and (max-width: 1170px) and (min-width: 992px) {
    .header--middle-left {
        column-gap: 0.625rem;
    }
}

